--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                         <div class="cards html">
                             <img class="card__imagem" src="imagens/html.png" alt="logo html">
-                            <p class="card__descricao">Conhecimento <strong class="foco">HTML</strong> para criar estruturas semânticas e acessíveis em projetos web. Com garantindo uma estrutura clara e organizada. E compreensao da importância de atributos e práticas recomendadas para melhorar a acessibilidade e a indexação em motores de busca. </p>
+                            <p class="card__descricao">Conhecimento <strong class="foco">HTML</strong> para criar estruturas semânticas e acessíveis em projetos web. Com garantia de uma estrutura clara e organizada. E compreensao da importância de atributos e práticas recomendadas para melhorar a acessibilidade. </p>
                         </div>
                         <div class="cards css">
                             <img class="card__imagem imagem__css" src="imagens/css.png" alt="logo css">
