--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="habilidades__cards">
                         <div class="cards python">
                             <img class="card__imagem" src="imagens/python.png" alt="logo python">
-                            <p class="card__descricao">Conhecimento em <strong class="foco">Python</strong>, com foco em orientação a objetos, APIs e Django. Minha formação inclui cursos que me proporcionaram uma base sólida nesses tópicos. Tenho experiência prática em desenvolver pequenos projetos.</p>
+                            <p class="card__descricao">Conhecimento em <strong class="foco">Python</strong>, com foco em orientação a objetos, APIs e Django. Minha formação inclui cursos que me proporcionaram uma base nesses tópicos. Tenho experiência prática em desenvolver pequenos projetos.</p>
                         </div>
                         <div class="cards html">
                             <img class="card__imagem" src="imagens/html.png" alt="logo html">
@@ -105,6 +105,14 @@
                         <div class="cards javascript">
                             <img class="card__imagem" src="imagens/javascript.png" alt="logo javascript">
                             <p class="card__descricao"> Conhecimento em <strong class="foco">JavaScript</strong> com foco em desenvolvimento web, APIs e frameworks modernos. Tenho experiência prática em desenvolver pequenos projetos, onde apliquei meus conhecimentos na criação de interfaces de usuário interativas e dinâmicas.</p>
+                        </div>
+                        <div class="cards java">
+                            <img class="card__imagem" src="imagens/java.png" alt="logo java">
+                            <p class="card__descricao"> "Conhecimento em <strong class="foco">Java</strong>, com foco em Programação Orientada a Objetos. Minha formação inclui a aplicação práticas da linguagem que é sua caracteristica de ser uma linguagem de programação versátil e amplamente utilizada no desenvolvimento de aplicações robustas.   
+                        </div>                        
+                        <div class="cards flutter">
+                            <img class="card__imagem" src="imagens/flutter.png" alt="logo flutter">
+                            <p class="card__descricao"> Conhecimento em <strong class="foco">Flutter</strong>, com Dart e foco no desenvolvimento de aplicativos móveis para Android e iOS. Tenho experiência prática em criar interfaces responsivas e fluidas pelo seu sistema de widgets altamente personalizável, além de integrar funcionalidades como notificações e autenticação de usuários
                         </div>
                     </div>
                 <div class="swiper">
@@ -131,6 +139,18 @@
                             <div class="cards javascript">
                                 <img class="card__imagem" src="imagens/javascript.png" alt="logo javascript">
                                 <p class="card__descricao"> Conhecimento em <strong class="foco">JavaScript</strong> com foco em desenvolvimento web, APIs e frameworks modernos. Tenho experiência prática em desenvolver pequenos projetos, onde apliquei meus conhecimentos na criação de interfaces de usuário interativas e dinâmicas.</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="cards java">
+                                <img class="card__imagem" src="imagens/java.png" alt="logo java">
+                                <p class="card__descricao"> "Conhecimento em <strong class="foco">Java</strong>, com foco em Programação Orientada a Objetos. Minha formação inclui a aplicação práticas da linguagem que é sua caracteristica de ser uma linguagem de programação versátil e amplamente utilizada no desenvolvimento de aplicações robustas.   
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="cards flutter">
+                                <img class="card__imagem" src="imagens/flutter.png" alt="logo flutter">
+                                <p class="card__descricao"> Conhecimento em <strong class="foco">Flutter</strong>, com Dart e foco no desenvolvimento de aplicativos móveis para Android e iOS. Tenho experiência prática em criar interfaces responsivas e fluidas pelo seu sistema de widgets altamente personalizável, além de integrar funcionalidades como notificações e autenticação de usuários
                             </div>
                         </div>
                     </div>
