--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <ul class="home__contatos">
                         <li class="contatos__item"><a href="https://github.com/Yan-Exe" target="_blank"><img class="home__imagem" src="imagens/github.png" alt="link do github"></a></li>
                         <li class="contatos__item"><a href="https://www.linkedin.com/in/yan-patrick" target="_blank"><img class="home__imagem" src="imagens/linkedin.png" alt="link do linkedin"></a></li>
-                        <li class="contatos__item"><a href="https://drive.google.com/uc?export=download&id=1l8tSlFLexb-vI7xu6Vm5rYlLxY8rmVRF" ><img class="home__imagem" src="imagens/curriculo.png" alt="link do curriculo"></a></li>
+                        <li class="contatos__item"><a href="https://drive.google.com/uc?export=download&id=1f7ZDanK6AZ9_0FNxousy-qCqhjuCeL44" ><img class="home__imagem" src="imagens/curriculo.png" alt="link do curriculo"></a></li>
                     </ul>
                 </h1>
-                <p class="home__descricao">Atualmente cursando Análise e Desenvolvimento de Sistemas e me aperfeiçoando atraves de cursos complementares. <br>Com conhecimentos nas tecnologias <strong class="foco">Python</strong>, <strong class="foco">JavaScript</strong>, <strong class="foco">HTML</strong> e <strong class="foco">CSS</strong>. Estou buscando adentrar me especializar na área. <br>Vamos conversar?</p>    
+                <p class="home__descricao">Atualmente cursando Análise e Desenvolvimento de Sistemas e me aperfeiçoando <br>atraves de cursos complementares. <br>Com conhecimentos nas tecnologias <strong class="foco">Java</strong>, <strong class="foco">Python</strong>, <strong class="foco">JavaScript</strong>, <strong class="foco">HTML</strong> e <strong class="foco">CSS</strong>. <br>Estou buscando atuar me especializar na área. <br>Vamos conversar?</p>    
             </div>
             <img class="home__foto efeite-reveal" src="imagens/foto.png" alt="foto minha">
         </section>
@@ -52,7 +52,7 @@
             <img class="sobre-mim__foto" src="imagens/programando.png" alt="programando">
             <div class="sobre-mim__conteudo">
                 <h2 class="sobre-mim__titulo">Sobre mim</h2>
-                <p class="sobre-mim__texto">Olá! Meu nome é Yan Patrick, tenho 20 anos e estou cursando Análise e Desenvolvimento de Sistemas. Além disso, estou constantemente me aperfeiçoando por meio de cursos e buscando oportunidades para ingressar na área de desenvolvimento de software. Estou sempre preparado para adquirir mais conhecimento e enfrentar novos desafios.</p>
+                <p class="sobre-mim__texto">Olá! Meu nome é Yan Patrick, tenho 21 anos e estou cursando Análise e Desenvolvimento de Sistemas. Além disso, estou constantemente me aperfeiçoando por meio de cursos e buscando oportunidades para ingressar na área de desenvolvimento de software. Estou sempre preparado para adquirir mais conhecimento e enfrentar novos desafios.</p>
                 <div class="texto__oculto">
                     <p class="sobre-mim__texto">Desde cedo, sempre tive muito contato com computadores, o que despertou meu interesse genuíno pela área de tecnologia. Confesso que inicialmente, nunca tinha tido nenhuma experiência com programação, mas decidi me dedicar totalmente a essa área e desde então tenho me empenhado para me tornar um desenvolvedor competente.
                         <br>Estou prestes a me formar este ano e, além da formação acadêmica, tenho investido em cursos adicionais para complementar meus estudos. Atualmente, possuo conhecimento em linguagens como HTML, CSS, JavaScript e Python. Continuo me aprofundando nessas tecnologias enquanto também busco aprender novas habilidades e ferramentas que possam enriquecer meu repertório. 
@@ -205,7 +205,7 @@
                 </div>  
             </div>
         </section>
-        <p class="rodape__texto">@2024 | Design and Code by Yan Patrick.</p>  
+        <p class="rodape__texto">©2024 | Design and Code by Yan Patrick.</p>  
     </footer>
 </body>
 </html>
