--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
                         <li class="contatos__item"><a href="https://drive.google.com/uc?export=download&id=1f7ZDanK6AZ9_0FNxousy-qCqhjuCeL44" ><img class="home__imagem" src="imagens/curriculo.png" alt="link do curriculo"></a></li>
                     </ul>
                 </h1>
-                <p class="home__descricao">Atualmente cursando Análise e Desenvolvimento de Sistemas e me aperfeiçoando <br>atraves de cursos complementares. <br>Com conhecimentos nas tecnologias <strong class="foco">Java</strong>, <strong class="foco">Python</strong>, <strong class="foco">JavaScript</strong>, <strong class="foco">HTML</strong> e <strong class="foco">CSS</strong>. <br>Estou buscando atuar me especializar na área. <br>Vamos conversar?</p>    
+                <div class="home__texto" >
+                    <p class="home__descricao">Atualmente cursando Análise e Desenvolvimento de Sistemas e me aperfeiçoando <br>atraves de cursos complementares. <br>Com conhecimentos nas tecnologias <strong class="foco">Java</strong>, <strong class="foco">Python</strong>, <strong class="foco">JavaScript</strong>, <strong class="foco">HTML</strong> e <strong class="foco">CSS</strong>. <br>Estou buscando atuar me especializar na área. <br>Vamos conversar?</p>    
+                </div>
             </div>
-            <img class="home__foto efeite-reveal" src="imagens/foto.png" alt="foto minha">
+            <img class="home__foto efeite-reveal" src="imagens/foto-1.png" alt="foto minha">
         </section>
         <section class="sobre-mim efeite-reveal" id="sobre-mim">
+            <img class="minha__foto efeite-reveal" src="imagens/foto.png" alt="foto minha">
             <img class="sobre-mim__foto" src="imagens/programando.png" alt="programando">
             <div class="sobre-mim__conteudo">
                 <h2 class="sobre-mim__titulo">Sobre mim</h2>
